move the Y entries

--- a/concept/demography-jewish/index.html
+++ b/concept/demography-jewish/index.html
@@ -482,7 +482,7 @@
 												</td>
 					</tr>
 					<tr>
-						<td><a href="/location/country/yugoslavia/index.html">Yugoslavia</a></td>
+						<td><a href="/location/y/index.html">Yugoslavia</a></td>
 						<td>
 
 							68,000 &mdash; 82,000
@@ -549,7 +549,7 @@
 				<a id="Yad"></a>Yad Vashem&rsquo;s Victim Database
 			</h4>
 			<p>
-				The Jerusalem Holocaust Memorial and Research Center <a href="/legal/institution/yad-vashem/index.html">Yad Vashem</a> has a database that tries to register all Jews who were reported as having died <q>during the Holocaust.</q> Registering any person as a Holocaust victim does not require any proof or evidence. It does also not involve any verification process to prevent false entries and multiple listings. Hence, this database is largely worthless from a scholarly point of view. For more details, see the entry on <a href="/legal/institution/yad-vashem/index.html">Yad Vashem</a>.
+				The Jerusalem Holocaust Memorial and Research Center <a href="/y/yad-vashem/index.html">Yad Vashem</a> has a database that tries to register all Jews who were reported as having died <q>during the Holocaust.</q> Registering any person as a Holocaust victim does not require any proof or evidence. It does also not involve any verification process to prevent false entries and multiple listings. Hence, this database is largely worthless from a scholarly point of view. For more details, see the entry on <a href="/y/yad-vashem/index.html">Yad Vashem</a>.
 			</p>
 			<h4>
 				<a id="Survivors"></a>Survivors
