--- a/result/six-million/index.html
+++ b/result/six-million/index.html
@@ -32,7 +32,7 @@
 				</p>
 			</blockquote>
 			<p>
-				The official Israeli institute <a href="/legal/institution/yad-vashem/index.html">Yad Vashem</a> says:
+				The official Israeli institute <a href="/y/yad-vashem/index.html">Yad Vashem</a> says:
 			</p>
 			<blockquote>
 				<p>
