--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -684,8 +684,8 @@
 				<li><a href="/witness/victim/wolken-otto/index.html">Wolken, Otto</a></li>
 				<li><a href="/instruments/camp/phantom-camp/wolzek/index.html">Wolzek</a></li>
 				<li><a href="/y/index.html">Y</a></li>
-				<li><a href="/legal/institution/yad-vashem/index.html">Yad Vashem</a></li>
-				<li><a href="/location/country/yugoslavia/index.html">Yugoslavia</a></li>
+				<li><a href="/y/yad-vashem/index.html">Yad Vashem</a></li>
+				<li><a href="/location/y/index.html">Yugoslavia</a></li>
 				<li><a href="/z/index.html">Z</a></li>
 				<li><a href="/witness/victim/zabecki-franciszek/index.html">Ząbecki, Franciszek</a></li>
 				<li><a href="/witness/victim/zaydel-matvey/index.html">Zaydel, Matvey</a></li>
