--- a/witness/false-witness/doessekker-bruno/index.html
+++ b/witness/false-witness/doessekker-bruno/index.html
@@ -44,7 +44,7 @@
 				</p>
 			</blockquote>
 			<p>
-				Deborah Dwork, at that time director of the Center for Holocaust Studies at Clark University, Worcester, Massachusetts, insisted that Doessekker was not a perpetrator but rather <i>a victim,</i> <q>a deeply scarred man</q> exploited by his publisher (<i>New York Times,</i> 3 Nov. 1998). Israel Gutman, then director of the <a href="/legal/institution/yad-vashem/index.html">Yad Vashem</a> Museum in Jerusalem, claimed it is irrelevant that Doessekker lied (<a href="/bibliography/index.html#Finkelstein2000">Finkelstein 2000</a>):
+				Deborah Dwork, at that time director of the Center for Holocaust Studies at Clark University, Worcester, Massachusetts, insisted that Doessekker was not a perpetrator but rather <i>a victim,</i> <q>a deeply scarred man</q> exploited by his publisher (<i>New York Times,</i> 3 Nov. 1998). Israel Gutman, then director of the <a href="/y/yad-vashem/index.html">Yad Vashem</a> Museum in Jerusalem, claimed it is irrelevant that Doessekker lied (<a href="/bibliography/index.html#Finkelstein2000">Finkelstein 2000</a>):
 			</p>
 			<blockquote>
 				<p>
