--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -716,10 +716,7 @@
 			<h3>
 				Y
 			</h3>
-			<ul>
-				<li><a href="/legal/institution/yad-vashem/index.html">Yad Vashem</a></li>
-				<li><a href="/location/country/yugoslavia/index.html">Yugoslavia</a></li>
-			</ul>
+				<div id="y-section"></div>
 			<h3>
 				Z
 			</h3>
@@ -745,18 +742,18 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 <script>
 	$(document).ready(function() {
-	$( "#masthead" ).load( "/_assets/includes/masthead.htm" );
-	$( "#aside" ).load( "/_assets/includes/aside.htm" );
-	$( "#nav-hhp" ).load( "/_assets/includes/nav.htm" );
+		$( "#masthead" ).load( "/_assets/includes/masthead.htm" );
+		$( "#aside" ).load( "/_assets/includes/aside.htm" );
+		$( "#nav-hhp" ).load( "/_assets/includes/nav.htm" );
 	});</script>
 <script src="/_assets/bootstrap3_player/bootstrap3_player.js"></script>
 
 <!-- end bbinclude -->
 <script>
 	$(document).ready(function() {
-	$( "#u-section" ).load( "/u/index.html #u-listing" );
+		$( "#u-section" ).load( "/u/index.html #u-listing" );
+		$( "#y-section" ).load( "/y/index.html #y-listing" );
 	});
 </script>
-
 </body>
 </html>
