--- a/y/index.html
+++ b/y/index.html
@@ -17,26 +17,12 @@
 			<h2>
 				Y
 			</h2>
-			 
-			<h3>
-				<a href="/legal/institution/yad-vashem/index.html">Yad Vashem</a>
-			</h3>
-			<p>
-				The Yad Vashem World Holocaust Remembrance Center in Jerusalem is one of the most important sites of the orthodox Holocaust ideology, second only perhaps to Auschwitz itself. The Center runs a museum, a research center, and an online Holocaust encyclopedia. But the most ambitious project of this institution is the attempt to identify all victims &hellip;
-			</p>
-			<p>
-				<a href="/legal/institution/yad-vashem/index.html"> Read More<span> Yad Vashem</span>&rarr; </a> 
-			</p>
-			 
-			<h3>
-				<a href="/location/country/yugoslavia/index.html">Yugoslavia</a>
-			</h3>
-			<p>
-				Yugoslavia was dismembered during the Second World War: It consisted of German-aligned Croatia, German-occupied Serbia and areas temporarily occupied/annexed by neighboring countries. In the present context, we focus on Serbia and Croatia. (See the entry on Jewish demography for a broader perspective.) Serbia In July 1941, a major uprising occurred in Serbia, which the German &hellip;
-			</p>
-			<p>
-				<a href="/location/country/yugoslavia/index.html"> Read More<span> Yugoslavia</span>&rarr; </a> 
-			</p>
+			<div id="y-listing">
+				<ul>
+					<li><a href="/y/yad-vashem/index.html">Yad Vashem</a></li>
+					<li><a href="/location/y/index.html">Yugoslavia</a></li>
+				</ul>
+			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
