move the Q entries

--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -530,9 +530,7 @@
 			<h3>
 				Q
 			</h3>
-			<ul>
-				<li><a href="/historical-person/politician/quakernack-walter/index.html">Quakernack, Walter</a></li>
-			</ul>
+				<div id="q-section"></div>
 			<h3>
 				R
 			</h3>
@@ -751,8 +749,9 @@
 <!-- end bbinclude -->
 <script>
 	$(document).ready(function() {
-		$( "#u-section" ).load( "/u/index.html #u-listing" );
-		$( "#y-section" ).load( "/y/index.html #y-listing" );
+		$( "#q-section" ).load( "/q/index.html #toc" );
+		$( "#u-section" ).load( "/u/index.html #toc" );
+		$( "#y-section" ).load( "/y/index.html #toc" );
 	});
 </script>
 </body>
