--- a/y/index.html
+++ b/y/index.html
@@ -17,7 +17,7 @@
 			<h2>
 				Y
 			</h2>
-			<div id="y-listing">
+			<div id="toc">
 				<ul>
 					<li><a href="/y/yad-vashem/index.html">Yad Vashem</a></li>
 					<li><a href="/location/y/index.html">Yugoslavia</a></li>
