--- a/q/index.html
+++ b/q/index.html
@@ -17,16 +17,11 @@
 			<h2>
 				Q
 			</h2>
-			 
-			<h3>
-				<a href="/historical-person/politician/quakernack-walter/index.html">Quakernack, Walter</a>
-			</h3>
-			<p>
-				Walter Quakernack (9 July 1907 &mdash; 11 Oct. 1946), SS Oberscharführer, was a mid-level employee at the Political Department of the Auschwitz Camp. He was mentioned by several witnesses, all of whom lack any credibility. Stanisław Jankowski constructed a fantastic tale involving Quakernack and another SS man being seduced by a Jewess doing a strip-tease &hellip;
-			</p>
-			<p>
-				<a href="/historical-person/politician/quakernack-walter/index.html"> Read More<span> Quakernack, Walter</span>&rarr; </a> 
-			</p>
+			<div id="toc">
+				<ul>
+					<li><a href="/q/quakernack-walter/index.html">Quakernack, Walter</a></li>
+				</ul>
+			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
@@ -34,9 +29,9 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 <script>
 	$(document).ready(function() {
-	$( "#masthead" ).load( "/_assets/includes/masthead.htm" );
-	$( "#aside" ).load( "/_assets/includes/aside.htm" );
-	$( "#nav-hhp" ).load( "/_assets/includes/nav.htm" );
+		$( "#masthead" ).load( "/_assets/includes/masthead.htm" );
+		$( "#aside" ).load( "/_assets/includes/aside.htm" );
+		$( "#nav-hhp" ).load( "/_assets/includes/nav.htm" );
 	});</script>
 <script src="/_assets/bootstrap3_player/bootstrap3_player.js"></script>
 
