--- a/u/index.html
+++ b/u/index.html
@@ -17,7 +17,7 @@
 			<h2>
 				U
 			</h2>
-			<div id="u-listing">
+			<div id="toc">
 				<ul>
 					<li><a href="/u/uhlenbrock-kurt/index.html">Uhlenbrock, Kurt</a></li>
 					<li><a href="/u/ukraine/index.html">Ukraine</a></li>
