--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 				</div>
 				</li>
 				<li>If you are looking for a general introduction into <q><a href="/event/holocaust-the/index.html">The Holocaust</a>,</q> read our <a href="/event/holocaust-the/index.html">entry about this over-arching topic</a>, which will guide you through this historical labyrinth. It is also available as an audio and a video presentation.</li>
-				<li>If you are looking for information on a specific Holocaust-related topic, use our site&rsquo;s search function &mdash; the search field at the top right on every page &mdash; in order to pull up entries that deal with this.</li>
-				<li>If you feel like browsing our entries, use the Letter Squares on the right to navigate to a list of all entries starting with a specific letter. Alternatively, click on the entry <a href="/how-to-use-this-site/index.html">Post Listing</a> in the list of <q>Pages of General Interest,</q> right beneath the Letter Squares, which pulls up ALL entries, sorted alphabetically. A more concise page just listing the headlines of each entry can be found in our <a href="/list-of-entries/index.html">List of Entries</a>.</li>
-				<li>If you are curious what entries cover a certain category, use the list of categories on the right, to pull up all entries placed in it. This category tree also gives you an idea on how we have organized our entries using this feature.</li>
+				<li>If you are looking for information on a specific Holocaust-related topic, use <a href="/search/index.html">our site&rsquo;s search function</a> to pull up entries that deal with this.</li>
+				<li>If you feel like browsing our entries, use the Letter Squares above to navigate to a list of all entries starting with a specific letter. Alternatively, click on the entry <a href="/how-to-use-this-site/index.html">Post Listing</a>, which pulls up ALL entries, sorted alphabetically. A more concise page just listing the headlines of each entry can be found in our <a href="/list-of-entries/index.html">List of Entries</a>.</li>
+				<li>If you are curious what entries cover a certain category, use the <a href="/category/index.html">list of categories</a>. This category tree also gives you an idea on how we have organized our entries using this feature.</li>
 				<li>A list of all the sources quoted in this encyclopedia can be found in our <a href="/bibliography/index.html">Bibliography</a>. All source references in our entries are linked to this page, so if you click on a reference, this page will open up in a separate window, positioned at the source referred to. If a source is accessible online, you will find a link in our bibliography, allowing you to pull up the source itself.</li>
 				<li>If you want to purchase our Encyclopedia, go to our <a href="https://holocaustencyclopedia.com/product/holocaust-encyclopedia/index.html">store</a>, where you can choose between a hardcover edition, a paperback edition, a text-only eBook version for downloading (PDF or ePub), and a downloadable eBook with text <i>and</i> audio files for all entries (ePub).</li>
 				<li>If you want to help us expand our Encyclopedia to cover additional topic, don&rsquo;t hesitate to get in touch using our <a href="https://holocaustencyclopedia.com/contact-us/index.html">Contact Us</a> form. If you are looking for inspirations as to what could possibly be done to help us, please read our short essay on our <a href="https://holocaustencyclopedia.com/support-us/index.html">Support Us</a> page, then consider whether any of it is within your means and abilities.</li>
@@ -37,16 +37,10 @@
 				<li>Finally, if you want to support us financially in order to empower us, so we can continue and expand this educational outreach free of charge, please consider making a donation on our <a href="https://holocaustencyclopedia.com/support-us/index.html">Support Us</a> page.</li>
 			</ul>
 			<h3>
-				Redirects
-			</h3>
-			<p>
-				Entries with an arrow in their headline, such as <q>anti-Semitism &rarr; Motives</q>, are mere redirects from the term left of the arrow to the term right of the arrow. You can still pull up that entry, but it will have only a link to the entry that covers this issue, and the page will redirect you there automatically after 10 seconds.
-			</p>
-			<h3>
 				Multi-Media Approach
 			</h3>
 			<p>
-				All our entries have a sound file posted at the top, which you can use to listen to the entry, rather than read it. We also strive to post videos along with each entries, but this is an ambitious project that will take some time to unfold. Hence, for now, we only have a few select topics accompanied by video documentaries.
+				Each of our entries has a sound file posted at the top, which you can use to listen to the entry, rather than read it. We also strive to post videos along with each entries, but this is an ambitious project that will take some time to unfold. Hence, for now, we only have a few select topics accompanied by video documentaries.
 			</p>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
