--- a/absurdities/cliches-about-the-holocaust/index.html
+++ b/absurdities/cliches-about-the-holocaust/index.html
@@ -144,7 +144,7 @@
 				<i>Cliché: The sky over Auschwitz was covered in thick smoke due to the heavily smoking crematorium chimneys and huge smoking pyres, especially at the time of the extermination of the Jews from Hungary (May-July 1944).</i>
 			</p>
 			<p>
-				Air photos taken by reconnaissance planes over <a href="/instruments/camp/mixed-purpose-camp/auschwitz/index.html">Auschwitz</a> between May and August 1944 prove that neither the crematoria nor any huge pyres or cremation pits were smoking. (See the entry <a href="/document/air-photos/index.html">Air Photos</a>.)
+				Air photos taken by reconnaissance planes over <a href="/instruments/camp/mixed-purpose-camp/auschwitz/index.html">Auschwitz</a> between May and August 1944 prove that neither the crematoria nor any huge pyres or cremation pits were smoking. (See the entry <a href="/a/air-photos/index.html">Air Photos</a>.)
 			</p>
 			<h6>
 				Soap Made from Human Fat
