--- a/change-log/index.html
+++ b/change-log/index.html
@@ -383,7 +383,7 @@
 				<li>Added a paragraph to the <a href="/introduction/index.html">Introduction</a> pointing to this new entry, and a reference to our <a href="index.html">Change Log</a> page at the very end.</li>
 				<li>Added an item to the entry <a href="/a/absurd-claims/index.html">Absurd Claims</a> on concrete mixers, and fixed errors in the next item on soap.</li>
 				<li>Added an entry on <a href="/location/other-crime-scene/rumbula/index.html">Rumbula</a>, a cross-reference to it in the entry on <a href="/a/adametz-gerhard/index.html">Gerhard Adametz</a>, and added an item to the <a href="/bibliography/index.html">Bibliography</a> for a source quoted in that new entry (<a href="/bibliography/index.html#Kues2012">Kues 2012</a>).</li>
-				<li>Slight change of wording in the first section of the entry on <a href="/document/air-photos/index.html">Air Photos</a>.</li>
+				<li>Slight change of wording in the first section of the entry on <a href="/a/air-photos/index.html">Air Photos</a>.</li>
 			</ul>
 			<h3>
 				August 30, 2024
