--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -33,7 +33,7 @@
 				<li><a href="/a/absurd-claims/index.html">Absurd Claims</a></li>
 				<li><a href="/category/absurdities/index.html">Absurdities &amp; Lies</a></li>
 				<li><a href="/a/adametz-gerhard/index.html">Adametz, Gerhard</a></li>
-				<li><a href="/document/air-photos/index.html">Air Photos</a></li>
+				<li><a href="/a/air-photos/index.html">Air Photos</a></li>
 				<li><a href="/instruments/einsatzgruppen/aktion-1005/index.html">Aktion 1005</a></li>
 				<li><a href="/event/aktion-reinhardt/index.html">Aktion Reinhardt</a></li>
 				<li><a href="/instruments/camp/pure-extermination-camp/aktion-reinhardt-camps/index.html">Aktion Reinhardt Camps</a></li>
