--- a/witness/perpetrator/grabner-maximilian/index.html
+++ b/witness/perpetrator/grabner-maximilian/index.html
@@ -34,7 +34,7 @@
 			</p>
 			<ul>
 				<li><i>Starting in early 1942, several gassings were carried out in the basement cells of Block 11.</i> The orthodoxy insists, however, that only one such gassing took place in this building, the infamous first gassing in early September 1941, although that <a href="/event/first-gassing-at-auschwitz/index.html">fictitious event</a> is refuted by genuine wartime documents. (See the entry on <a href="/event/first-gassing-at-auschwitz/index.html">First Gassing, at Auschwitz</a>.)</li>
-				<li><i>300,000 dead inmates were buried in 1941 and 1942 due to lack of cremation capacity.</i> The orthodoxy insists on some 100,000 buried inmates, but wartime <a href="/document/air-photos/index.html">air photos</a> set the figure closer to 10,000 to 20,000. (See <a href="/bibliography/index.html#Rudolf2020a">Rudolf 2020a</a>, p. 119.)</li>
+				<li><i>300,000 dead inmates were buried in 1941 and 1942 due to lack of cremation capacity.</i> The orthodoxy insists on some 100,000 buried inmates, but wartime <a href="/a/air-photos/index.html">air photos</a> set the figure closer to 10,000 to 20,000. (See <a href="/bibliography/index.html#Rudolf2020a">Rudolf 2020a</a>, p. 119.)</li>
 				<li><i>In order to erase the traces of this mass murder, orders came from Berlin in 1942, after the discovery of the Katyn mass graves, to unearth and burn the corpses.</i> However, Katyn was discovered only in April of 1943. (His former subordinate <a href="/broad-pery-s/index.html">Pery Broad</a> told the same lie, suggesting that these false ideas were planted by their interrogators.)</li>
 			</ul>
 			<p>
