--- a/witness/victim/lengyel-olga/index.html
+++ b/witness/victim/lengyel-olga/index.html
@@ -40,7 +40,7 @@
 				<li>There were altogether 120 <q>openings</q> (muffles) &mdash; although there were actually (twice 5&times;3 and twice 8 =) 46 muffles.</li>
 				<li>Three corpses fit into each muffle &mdash; while they were designed only for one, and could at best accommodate two, but without gaining any advantage in speed.</li>
 				<li>720 corpses could be cremated within an hour &mdash; while the cremation of a single corpse lasted actually an hour, hence a maximum of 46 corpses per hour could be cremated by all facilities.</li>
-				<li>The <q>death pits</q> could destroy 8,000 bodies a day &mdash; although <a href="/document/air-photos/index.html#Auschwitz">air photos</a> clearly prove that those pits never existed.</li>
+				<li>The <q>death pits</q> could destroy 8,000 bodies a day &mdash; although <a href="/a/air-photos/index.html#Auschwitz">air photos</a> clearly prove that those pits never existed.</li>
 			</ul>
 			<p>
 				From this it is clear that Lengyel took a little information from the <a href="/document/war-refugee-board-report/index.html">War Refugee Board Report</a>, but then freely invented and further inflated the cremation capacity to preposterous dimensions. From the flawed way she described the crematoria, it is clear that she had neither first-hand knowledge nor reliable hearsay information.
