--- a/witness/victim/suss-franz/index.html
+++ b/witness/victim/suss-franz/index.html
@@ -30,7 +30,7 @@
 				He mentioned a daily death toll of 400 to 600 inmates when the <a href="/concept/typhus/index.html">typhus</a> epidemic broke out due to catastrophic hygienic conditions at <a href="/instruments/camp/mixed-purpose-camp/birkenau/index.html">Birkenau</a> (in July/August 1942), which is all true, except for his figures, which were not daily averages but rather peak values in August 1942.
 			</p>
 			<p>
-				The victims were buried in four large <a href="/location/other-crime-scene/mass-graves/index.html">mass graves</a> some 10 meters wide (correct). The length Süss indicated (400 m) is four times the length visible on <a href="/document/air-photos/index.html#Auschwitz">air photos</a>, and the depths he indicated (3 m) is probably twice as deep as would have been possible. He described how the pits filled with <a href="/concept/groundwater-level/index.html">groundwater</a> (correct), which had to be pumped off.
+				The victims were buried in four large <a href="/location/other-crime-scene/mass-graves/index.html">mass graves</a> some 10 meters wide (correct). The length Süss indicated (400 m) is four times the length visible on <a href="/a/air-photos/index.html#Auschwitz">air photos</a>, and the depths he indicated (3 m) is probably twice as deep as would have been possible. He described how the pits filled with <a href="/concept/groundwater-level/index.html">groundwater</a> (correct), which had to be pumped off.
 			</p>
 			<p>
 				He mentioned some 60,000 typhus victims buried in these graves, which were exhumed and burned starting in October 1942. The actual number is probably closer to 10,000 to 20,000, though, but the fact and the month are fairly accurate.
