--- a/a/index.html
+++ b/a/index.html
@@ -36,13 +36,13 @@
 				<a href="/a/adametz-gerhard/index.html"> Read More<span> Adametz, Gerhard</span>&rarr; </a>
 			</p>
 						<h3>
-				<a href="/document/air-photos/index.html">Air Photos</a>
+				<a href="/a/air-photos/index.html">Air Photos</a>
 			</h3>
 			<p>
 				In modern warfare, air superiority is crucial. It allows one to know where the enemy is, what he is doing, and to attack him at will with minimal repercussions. Taking air photos to explore enemy territory was, therefore, a top priority during World War II. Many of these photos, however, disappeared after the war into &hellip;
 			</p>
 			<p>
-				<a href="/document/air-photos/index.html"> Read More<span> Air Photos</span>&rarr; </a>
+				<a href="/a/air-photos/index.html"> Read More<span> Air Photos</span>&rarr; </a>
 			</p>
 						<h3>
 				<a href="/instruments/einsatzgruppen/aktion-1005/index.html">Aktion 1005</a>
