--- a/location/camps/transit-camps/index.html
+++ b/location/camps/transit-camps/index.html
@@ -121,7 +121,7 @@
 				The <a href="/instruments/camp/mixed-purpose-camp/auschwitz/index.html">Auschwitz Camp</a> was initially thought of as a mere transit camp, before plans were eventually upgraded to a full-fledged concentration camp.
 			</p>
 			<p>
-				When some 400,000 Hungarian Jews were deported in 1944, the orthodoxy has it that almost all of them were killed on arrival, since there is no record of them getting registered in the camp. However, air <a href="/document/air-photos/index.html#Auschwitz">photos</a> taken of the Auschwitz Camp at that time prove irrefutably that the orthodox narrative of a mass murder of unprecedented scale is untrue.
+				When some 400,000 Hungarian Jews were deported in 1944, the orthodoxy has it that almost all of them were killed on arrival, since there is no record of them getting registered in the camp. However, air <a href="/a/air-photos/index.html#Auschwitz">photos</a> taken of the Auschwitz Camp at that time prove irrefutably that the orthodox narrative of a mass murder of unprecedented scale is untrue.
 			</p>
 			<p>
 				Many of these Hungarian Jews were indeed deported <i>via</i> Auschwitz, but not with the final destination Auschwitz. At that time, large parts of the Auschwitz-<a href="/instruments/camp/mixed-purpose-camp/birkenau/index.html">Birkenau</a> Camp were turned into a transit camp for these Jews, foremost in the hospital section, Camp Sector III, which was still under construction. In July of 1944, Birkenau had one of its older, completed sectors rededicated to serve as a transit camp for Jewesses deported from <a href="/country/hungary/index.html">Hungary</a>. After a quarantine, they got eventually transferred to other labor and concentration camps throughout Germany.
