--- a/a/index.html
+++ b/a/index.html
@@ -45,13 +45,13 @@
 				<a href="/a/air-photos/index.html"> Read More<span> Air Photos</span>&rarr; </a>
 			</p>
 						<h3>
-				<a href="/instruments/einsatzgruppen/aktion-1005/index.html">Aktion 1005</a>
+				<a href="/a/aktion-1005/index.html">Aktion 1005</a>
 			</h3>
 			<p>
 				Orthodox Narrative Sometime in 1942, SS chief Heinrich Himmler is said to have decided that the traces of atrocities committed by German units both in the various so-called extermination camps as well as during mass shootings outside of camps needed to be erased. To this end, mass graves were ordered to be opened, the corpses &hellip;
 			</p>
 			<p>
-				<a href="/instruments/einsatzgruppen/aktion-1005/index.html"> Read More<span> Aktion 1005</span>&rarr; </a>
+				<a href="/a/aktion-1005/index.html"> Read More<span> Aktion 1005</span>&rarr; </a>
 			</p>
 						<h3>
 				<a href="/event/aktion-reinhardt/index.html">Aktion Reinhardt</a>
