--- a/event/holocaust-the/index.html
+++ b/event/holocaust-the/index.html
@@ -102,7 +102,7 @@
 				The <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a> were a task force set up by Germany to <q>pacify</q> the territories conquered in the east. According to the mainstream narrative, the main goal of these units was the mass murder of Jewish civilians in the temporarily German-occupied areas of the Soviet Union. This mass murder is said to have been implemented mainly by mass shootings, and to a smaller degree also by way of asphyxiation in so-called <a href="/instruments/tool/gas-vans/index.html">gas vans</a>.
 			</p>
 			<p>
-				Once the German armed forces were retreating out of the Soviet Union, the <i>Einsatzgruppen</i> are said to have organized a grand scheme to exhume all the bodies in thousands of mass graves scattered throughout the occupied Soviet territories, and to burn the remains on pyres in order to erase the traces of these crimes. The Holocaust orthodoxy refers to these activities as <q><a href="/instruments/einsatzgruppen/aktion-1005/index.html"><i>Aktion</i> 1005</a>.</q>
+				Once the German armed forces were retreating out of the Soviet Union, the <i>Einsatzgruppen</i> are said to have organized a grand scheme to exhume all the bodies in thousands of mass graves scattered throughout the occupied Soviet territories, and to burn the remains on pyres in order to erase the traces of these crimes. The Holocaust orthodoxy refers to these activities as <q><a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>.</q>
 			</p>
 			<h4>
 				b. <a id="Physical"></a>Physical Instruments, or Tools
@@ -133,7 +133,7 @@
 			</p>
 			<ol>
 				<li><a href="/instruments/tool/crematoria/index.html">Cremation furnaces</a>. These should be expected to have existed foremost at the pure extermination camps, but none of them had any crematoria.</li>
-				<li><a href="/instruments/tool/open-air-incinerations/index.html">Open-air incineration</a> on pyres. These were allegedly used virtually at every location, for which large numbers of victims are claimed, including during the <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a>&rsquo;s <a href="/instruments/einsatzgruppen/aktion-1005/index.html"><i>Aktion</i> 1005</a>.</li>
+				<li><a href="/instruments/tool/open-air-incinerations/index.html">Open-air incineration</a> on pyres. These were allegedly used virtually at every location, for which large numbers of victims are claimed, including during the <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a>&rsquo;s <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>.</li>
 				<li><a href="/absurdities/explosives-to-erase-corpses/index.html">Explosives</a>. This method was primarily claimed by <a href="/witness/perpetrator/hoss-rudolf/index.html">Rudolf Höss</a>; <a href="/witness/victim/davydov-vladimir/index.html">Vladimir Davydov</a> made related claims.</li>
 			</ol>
 			<p>
@@ -236,7 +236,7 @@
 				Furthermore, each major crime scene claimed for the Holocaust discusses material traces that were presumably found during forensic investigations, or if nothing else, it elaborates on physical traces that should be expected. These are discussed in the entries dedicated to the claimed extermination camps at <a href="/instruments/camp/pure-extermination-camp/belzec/index.html">Belzec</a>, <a href="/instruments/camp/pure-extermination-camp/chelmno/index.html">Chełmno</a>, <a href="/location/camps/semlin/index.html">Semlin</a>, <a href="/location/camps/sobibor/index.html">Sobibór</a> and <a href="/instruments/camp/pure-extermination-camp/treblinka/index.html">Treblinka</a>.
 			</p>
 			<p>
-				The entry on the <a href="/instruments/tool/einsatzgruppen/index.html#Forensic"><i>Einsatzgruppen</i></a> has a section discussing forensic findings claimed by Soviet authorities about <i>Einsatzgruppen</i> massacres. The entry on <a href="/instruments/einsatzgruppen/aktion-1005/index.html#Forensic"><i>Aktion</i> 1005</a> has a similar section that discusses material implications of claims made by witnesses in connection with large-scale <a href="/instruments/tool/open-air-incinerations/index.html">outdoor corpse cremations</a>.
+				The entry on the <a href="/instruments/tool/einsatzgruppen/index.html#Forensic"><i>Einsatzgruppen</i></a> has a section discussing forensic findings claimed by Soviet authorities about <i>Einsatzgruppen</i> massacres. The entry on <a href="/a/aktion-1005/index.html#Forensic"><i>Aktion</i> 1005</a> has a similar section that discusses material implications of claims made by witnesses in connection with large-scale <a href="/instruments/tool/open-air-incinerations/index.html">outdoor corpse cremations</a>.
 			</p>
 			<p>
 				Some of the evidence presumably gathered by Soviet investigators in this context were presented during the show trials at <a href="/legal/trial/krasnodar/index.html">Krasnodar</a> and <a href="/legal/trial/kharkov/index.html">Kharkov</a>, and are discussed in these entries.
@@ -275,7 +275,7 @@
 				Documents on the activities of the <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a> are quite abundant, and they paint a disturbing picture. However, contradictions and inconsistencies raise issues that can be resolved only by forensic investigations.
 			</p>
 			<p>
-				In contrast to the killing activities of the <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a>, there is almost no documental trace of any attempt to erase the mass graves of these massacres, as is said to have happened during the so-called <a href="/instruments/einsatzgruppen/aktion-1005/index.html"><i>Aktion</i> 1005</a>. See that entry for details.
+				In contrast to the killing activities of the <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a>, there is almost no documental trace of any attempt to erase the mass graves of these massacres, as is said to have happened during the so-called <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>. See that entry for details.
 			</p>
 			<p>
 				There are very few documents mentioning the existence of homicidal <a href="/instruments/tool/gas-vans/index.html">gas vans</a>. They are summarized in an entry dedicated to these vehicles. A more thorough discussion is contained in the entry on the <a href="/legal/company/gaubschat-company/index.html">Gaubschat Company</a> that presumably built these vehicles, and in entries of two individuals, who both are said to have written a letter mentioning gas vans: <a href="/witness/perpetrator/becker-august/index.html">August Becker</a> and <a href="/historical-person/politician/turner-harald/index.html">Harald Turner</a>.
