--- a/witness/victim/amiel-szymon/index.html
+++ b/witness/victim/amiel-szymon/index.html
@@ -104,7 +104,7 @@
 				If we look at the total claimed (last table row), we see that Amiel&rsquo;s team would have taken more than a year just to cut the wood needed to cremate all the bodies he claims they cremated. This would have required the felling of all trees growing in a 50-year-old spruce forest covering up to 24 hectares of land, or some 53 American football fields. To get this work done within the 57 days claimed would have required a work force of some 298 dedicated lumberjacks just to cut the wood.
 			</p>
 			<p>
-				This testimony relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <i><a href="/instruments/einsatzgruppen/aktion-1005/index.html">Aktion</a></i><a href="/instruments/einsatzgruppen/aktion-1005/index.html"> 1005</a>. The above data demonstrate conclusively that Amiel&rsquo;s entire scenario is completely detached from reality. It cannot be based on experience, but on mere imagination and delusion.
+				This testimony relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <i><a href="/a/aktion-1005/index.html">Aktion</a></i><a href="/a/aktion-1005/index.html"> 1005</a>. The above data demonstrate conclusively that Amiel&rsquo;s entire scenario is completely detached from reality. It cannot be based on experience, but on mere imagination and delusion.
 			</p>
 			<p>
 				(For more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 632-639.)
