--- a/witness/victim/blyazer-a/index.html
+++ b/witness/victim/blyazer-a/index.html
@@ -36,7 +36,7 @@
 				If this tale has a real background, it can have been about at most a few thousand bodies, but certainly not 68,000.
 			</p>
 			<p>
-				This testimony relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <a href="/instruments/einsatzgruppen/aktion-1005/index.html"><i>Aktion</i> 1005</a>. The above exposition demonstrates that Blyazer&rsquo;s entire scenario is completely detached from reality. Its claimed dimension cannot be based on experience, but on mere propaganda, imagination and delusion.
+				This testimony relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>. The above exposition demonstrates that Blyazer&rsquo;s entire scenario is completely detached from reality. Its claimed dimension cannot be based on experience, but on mere propaganda, imagination and delusion.
 			</p>
 			<p>
 				(See also the similar accounts by <a href="/farber-yuri/index.html">Yuri Farber</a>, <a href="/zaydel-matvey/index.html">Matvey Zaydel</a> and <a href="/gol-szloma/index.html">Szloma Gol</a>; for more details, see the entries on <a href="/instruments/einsatzgruppen/ponary/index.html">Ponary</a>, on <a href="/technology/lumberjacks/index.html">lumberjacks</a>, as well as <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 677-679.)
