--- a/witness/victim/faitelson-alex/index.html
+++ b/witness/victim/faitelson-alex/index.html
@@ -39,7 +39,7 @@
 				<li>The inmates filled up the stash of firewood at Fort IX by collecting branches on the way back to the fort &mdash; 600 kg of <i>branches</i> per person every day.</li>
 			</ul>
 			<p>
-				The only event that is backed up by documents is the escape of 63 Jews from Fort IX on 25 December 1943. However, the rest of Faitelson&rsquo;s testimony, which relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <a href="/instruments/einsatzgruppen/aktion-1005/index.html"><i>Aktion</i> 1005</a>, is not backed up by anything. The above-critiqued peculiar claims indicate that Faitelson&rsquo;s entire scenario is completely detached from reality. It cannot be based on experience, but on mere imagination and delusion.
+				The only event that is backed up by documents is the escape of 63 Jews from Fort IX on 25 December 1943. However, the rest of Faitelson&rsquo;s testimony, which relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>, is not backed up by anything. The above-critiqued peculiar claims indicate that Faitelson&rsquo;s entire scenario is completely detached from reality. It cannot be based on experience, but on mere imagination and delusion.
 			</p>
 			<p>
 				(For more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 656-665.)
