--- a/witness/victim/farber-yuri/index.html
+++ b/witness/victim/farber-yuri/index.html
@@ -68,7 +68,7 @@
 				If Farber&rsquo;s tale has any real background, it would have been on a much smaller order of magnitude than what he claimed.
 			</p>
 			<p>
-				This testimony relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <a href="/instruments/einsatzgruppen/aktion-1005/index.html"><i>Aktion</i> 1005</a>. The above exposition demonstrates conclusively that Farber&rsquo;s entire scenario is completely detached from reality. It cannot be based on experience, but on mere propaganda, imagination and delusion.
+				This testimony relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>. The above exposition demonstrates conclusively that Farber&rsquo;s entire scenario is completely detached from reality. It cannot be based on experience, but on mere propaganda, imagination and delusion.
 			</p>
 			<p>
 				(See also the similar accounts by <a href="/blyazer-a/index.html">A. Blyazer</a>, <a href="/zaydel-matvey/index.html">Matvey Zaydel</a> and <a href="/gol-szloma/index.html">Szloma Gol</a>; for more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 670-677.)
