--- a/witness/witnesses/index.html
+++ b/witness/witnesses/index.html
@@ -30,7 +30,7 @@
 				For a list of <a href="/false-witness/false-witnesses/index.html">false witnesses</a> who never were at the claimed locations at the asserted time, see that entry.
 			</p>
 			<h4>
-				<i><a id="Aktion" href="/instruments/einsatzgruppen/aktion-1005/index.html">Aktion</a></i> 1005
+				<i><a id="Aktion" href="/a/aktion-1005/index.html">Aktion</a></i> 1005
 			</h4>
 			<ul>
 				<li><a href="/perpetrator/adametz-gerhard/index.html">Adametz, Gerhard</a></li>
