--- a/witness/victim/zaydel-matvey/index.html
+++ b/witness/victim/zaydel-matvey/index.html
@@ -39,7 +39,7 @@
 				If Zaydel&rsquo;s tale has any real background, it would have been on a much smaller order of magnitude than what he claims.
 			</p>
 			<p>
-				This testimony relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <a href="/instruments/einsatzgruppen/aktion-1005/index.html"><i>Aktion</i> 1005</a>. The above exposition demonstrates that Zaydel&rsquo;s scenario is detached from reality. Its claimed dimensions cannot be based on experience, but on mere propaganda, imagination and delusion.
+				This testimony relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>. The above exposition demonstrates that Zaydel&rsquo;s scenario is detached from reality. Its claimed dimensions cannot be based on experience, but on mere propaganda, imagination and delusion.
 			</p>
 			<p>
 				(See also the similar accounts by <a href="/farber-yuri/index.html">Yuri Farber</a>, <a href="/blyazer-a/index.html">A. Blyazer</a> and <a href="/gol-szloma/index.html">Szloma Gol</a>; for more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 679f., 683-688.)
