move assets to their new locations

--- a/change-log/index.html
+++ b/change-log/index.html
@@ -21,13 +21,27 @@
 				Changes are listed in reverse chronological order.
 			</p>
 			<h3>
+				November 5, 2024 <small>(This mirror site only)</small>
+			</h3>
+			<ul>
+				<li>Manually converted the content from the original WordPress version to static HTML pages.</li>
+				<li>Convert from WordPress style(s) to Bootstrap.</li>
+				<li>Add custom formatting to better blend with other content on the Historiography Project websites.</li>
+				<li>Extensive file re-organization, code reformatting, and syntax correction.</li>
+				<li>Removed or changed the links to all requests for funds, so as to conform to the restrictions of the website hosting company.</li>
+			</ul>
+			<h3>
 				October 14, 2024
 			</h3>
 			<ul>
 				<li>Corrected typos and bad grammar, improved expressions and/or added a few more cross references in a wide range of entries (Ukraine, Vaillant-Couturier, van Roden, Veil, Venezia, Morris, Venezia, Shlomo, Ventilation, Vrba, Wannsee Conference, War Refugee Board Report, Warsaw Ghetto, Warszawski, Wedding Rings, Weiss, Weliczker, Widmann, Wiernik, Witnesses against Mass Murder, Wolff, Wolken, Yad Vashem, Yugoslavia, Zentralsauna, Źłobnicki, Zyklon B, Zyklon-B Introduction Devices).</li>
 				<li>Entry on <a href="/witness/victim/venezia-shlomo/index.html">Venezia, Shlomo</a>: a reference to a dedicated paper on this witness was added: <a href="/bibliography/index.html#Mattogno2010a">Mattogno 2010a</a>, with a related addition to the <a href="/bibliography/index.html">Bibliography</a>: Mattogno, Carlo 2010a. <q>&lsquo;The Truth about the Gas Chambers&rsquo;?,</q> <i>Inconvenient History,</i> Vol. 2, No. 1, 2010, pp. 70-125; <a href="https://codoh.com/library/document/the-truth-about-the-gas-chambers/">https://codoh.com/library/document/the-truth-about-the-gas-chambers/</a>.</li>
-				<li>Entry on <a href="/witness/victim/wiernik-jankiel-yankiel/index.html">Wiernik, Jankiel</a>: A list item was added addressing the transformation of Wiernik&rsquo;s chlorine-filling flap:<br />
-				<q>In his first text, chlorine was poured through a flap in the roof; in later versions of his story, according to which the killing was done with exhaust gas, this chlorine-filling flap, which no longer had any purpose, mutated into a ventilation opening. Such a roof opening is not part of the current orthodox narrative, but was mentioned by two other witnesses who evidently plagiarized Wiernik&rsquo;stext (see the entries on Abraham Goldfarb and Eliyahu Rosenberg.)</q><br />
+				<li>Entry on <a href="/witness/victim/wiernik-jankiel-yankiel/index.html">Wiernik, Jankiel</a>: A list item was added addressing the transformation of Wiernik&rsquo;s chlorine-filling flap:
+				<blockquote>
+					<p>
+						In his first text, chlorine was poured through a flap in the roof; in later versions of his story, according to which the killing was done with exhaust gas, this chlorine-filling flap, which no longer had any purpose, mutated into a ventilation opening. Such a roof opening is not part of the current orthodox narrative, but was mentioned by two other witnesses who evidently plagiarized Wiernik&rsquo;s text (see the entries on Abraham Goldfarb and Eliyahu Rosenberg.)
+					</p>
+				</blockquote>
 				Furthermore, a mistake regarding the plagiarized Treblinka camp map of the November 1942 report was corrected: the map is included in the English edition of Wiernik&rsquo;s text, not in the Polish edition (it was probably simply forgotten there, as a reference to it in the text points nowhere.)</li>
 				<li>Entry on <a href="/y/yad-vashem/index.html">Yad Vashem</a>: three more source references were added, with related additions to the Bibliography: <a href="/bibliography/index.html#Boisdefeu2017a">Boisdefeu 2017a</a>; <a href="/bibliography/index.html#Olodogma">Olodogma</a>; <a href="/bibliography/index.html#Mattogno2017a">Mattogno 2017a</a>:
 				<ul>
