--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -32,6 +32,7 @@
 			<ul>
 				<li><a href="/introduction/index.html">Introduction</a></li>
 			</ul>
+			<div style="columns: 100px 2;">
 			<h3>
 				A
 			</h3>
@@ -735,6 +736,8 @@
 			<ul>
 				<li><a href="/bibliography/index.html">Bibliography</a></li>
 			</ul>
+			</div>
+
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
