--- a/a/index.html
+++ b/a/index.html
@@ -19,26 +19,28 @@
 			<h2>
 				A
 			</h2>
-			<ul>
-				<li><a href="/a/absurd-claims/index.html">Absurd Claims</a></li>
-				<li><a href="/a/adametz-gerhard/index.html">Adametz, Gerhard</a></li>
-				<li><a href="/a/air-photos/index.html">Air Photos</a></li>
-				<li><a href="/a/aktion-1005/index.html">Aktion 1005</a></li>
-				<li><a href="/a/aktion-reinhardt/index.html">Aktion Reinhardt</a></li>
-				<li><a href="/a/aktion-reinhardt-camps/index.html">Aktion Reinhardt Camps</a></li>
-				<li><a href="/a/amiel-szymon/index.html">Amiel, Szymon</a></li>
-				<li><a href="/a/auerbach-rachel/index.html">Auerbach, Rachel</a></li>
-				<li><a href="/a/aumeier-hans/index.html">Aumeier, Hans</a></li>
-				<li><a href="/a/auschwitz/index.html">Auschwitz</a></li>
-				<li><a href="/a/auschwitz-bombing-of/index.html">Auschwitz, Bombing of</a></li>
-				<li><a href="/a/auschwitz-album/index.html">Auschwitz Album</a></li>
-				<li><a href="/a/auschwitz-death-books/index.html">Auschwitz Death Books</a></li>
-				<li><a href="/a/auschwitz-main-camp/index.html">Auschwitz Main Camp</a></li>
-				<li><a href="/a/auschwitz-museum/index.html">Auschwitz Museum</a></li>
-				<li><a href="/a/auschwitz-trials/index.html">Auschwitz Trials</a></li>
-				<li><a href="/a/austria/index.html">Austria</a></li>
-				<li><a href="/a/avey-denis/index.html">Avey, Denis</a></li>
-			</ul>
+			<div id="toc">
+				<ul>
+					<li><a href="/a/absurd-claims/index.html">Absurd Claims</a></li>
+					<li><a href="/a/adametz-gerhard/index.html">Adametz, Gerhard</a></li>
+					<li><a href="/a/air-photos/index.html">Air Photos</a></li>
+					<li><a href="/a/aktion-1005/index.html">Aktion 1005</a></li>
+					<li><a href="/a/aktion-reinhardt/index.html">Aktion Reinhardt</a></li>
+					<li><a href="/a/aktion-reinhardt-camps/index.html">Aktion Reinhardt Camps</a></li>
+					<li><a href="/a/amiel-szymon/index.html">Amiel, Szymon</a></li>
+					<li><a href="/a/auerbach-rachel/index.html">Auerbach, Rachel</a></li>
+					<li><a href="/a/aumeier-hans/index.html">Aumeier, Hans</a></li>
+					<li><a href="/a/auschwitz/index.html">Auschwitz</a></li>
+					<li><a href="/a/auschwitz-album/index.html">Auschwitz Album</a></li>
+					<li><a href="/a/auschwitz-bombing-of/index.html">Auschwitz, Bombing of</a></li>
+					<li><a href="/a/auschwitz-death-books/index.html">Auschwitz Death Books</a></li>
+					<li><a href="/a/auschwitz-main-camp/index.html">Auschwitz Main Camp</a></li>
+					<li><a href="/a/auschwitz-museum/index.html">Auschwitz Museum</a></li>
+					<li><a href="/a/auschwitz-trials/index.html">Auschwitz Trials</a></li>
+					<li><a href="/a/austria/index.html">Austria</a></li>
+					<li><a href="/a/avey-denis/index.html">Avey, Denis</a></li>
+				</ul>
+			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
