change http to https

--- a/a/auschwitz/index.html
+++ b/a/auschwitz/index.html
@@ -193,7 +193,7 @@
 				</tbody>
 				<tfoot>
 				<tr>
-					<td colspan="2">See also <a href="http://en.wikipedia.org/wiki/Auschwitz_concentration_camp#Death_toll">http://en.wikipedia.org/wiki/Auschwitz_concentration_camp#Death_toll</a></td>
+					<td colspan="2">See also <a href="https://en.wikipedia.org/wiki/Auschwitz_concentration_camp#Death_toll">https://en.wikipedia.org/wiki/Auschwitz_concentration_camp#Death_toll</a></td>
 				</tr>
 				</tfoot>
 			</table>
