--- a/introduction/index.html
+++ b/introduction/index.html
@@ -345,7 +345,7 @@
 				We think, however, that all entries ought to be listed, and in cases of conflict explained. But this would quickly become unwieldy and almost useless. The orthodox Holocaust narrative simply isn&rsquo;t a straight-forward chronological series of events that can be squeezed into a calendar. Therefore, the reader will find no chronology here.
 			</p>
 			<p>
-				This encyclopedia also exists as an online version at <a href="http://www.HolocaustEncyclopedia.com">www.HolocaustEncyclopedia.com</a>, which is accessible free of charge. In addition to the written text and the illustrations contained in the printed version, the online edition has all entries rendered as sound files, so you can listen to them rather than read them. A few entries also come with a video file, which presents the contents of an entry in a brief video documentary. We strive to produce more of these videos, but this will take some time.
+				This encyclopedia also exists as an online version at <a href="https://www.HolocaustEncyclopedia.com">www.HolocaustEncyclopedia.com</a>, which is accessible free of charge. In addition to the written text and the illustrations contained in the printed version, the online edition has all entries rendered as sound files, so you can listen to them rather than read them. A few entries also come with a video file, which presents the contents of an entry in a brief video documentary. We strive to produce more of these videos, but this will take some time.
 			</p>
 			<p>
 				This encyclopedia is a work in progress, and any correction or addition made will be posted in real time online on our <a href="/change-log/index.html">Change Log page</a>. The printed edition will expand and update with each new edition issued.
