--- a/witness/victim/gabai-dario/index.html
+++ b/witness/victim/gabai-dario/index.html
@@ -42,7 +42,7 @@
 			</p>
 			<ul>
 				<li>For excerpts from the Gabai interview with the Shoah Foundation, see <a href="/bibliography/index.html#Skorczewski">Skorczewski 2015</a>; video excerpts at <a href="https://youtu.be/jgrJ0jvy_sA">youtu.be/jgrJ0jvy_sA</a>;</li>
-				<li>For a transcript of <i>Auschwitz: Inside the Nazi State,</i> see <a href="http://www.pbs.org/auschwitz/transcripts.html">www.pbs.org/auschwitz/transcripts.html</a>.</li>
+				<li>For a transcript of <i>Auschwitz: Inside the Nazi State,</i> see <a href="https://www.pbs.org/auschwitz/transcripts.html">www.pbs.org/auschwitz/transcripts.html</a>.</li>
 			</ul>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
