--- a/historical-person/berg-isai-davidovich/index.html
+++ b/historical-person/berg-isai-davidovich/index.html
@@ -26,7 +26,7 @@
 				Isai Davidovich Berg (1905 &mdash; 1939), a Russian Jew and head of the economic department of the NKVD for the Moscow region, invented an actual method of executing people while being transported in prison vans. For this purpose, the highly lethal exhaust gases of Soviet-made, gasoline-engine vans were ducted into the rear cargo hold, where the prisoners inside subsequently died of carbon-monoxide poisoning. This method of executing unsuspecting prisoners was used by the NKVD from 1936 onward. In 1943, during the show trial of <a href="/legal/trial/kharkov/index.html">Kharkov</a>, the Soviets started blaming this murder method on the German occupational forces, accusing them of having murdered thousands of unsuspecting innocent victims in so-called murder vans or <a href="/instruments/tool/gas-vans/index.html">gas vans</a>.
 			</p>
 			<p>
-				(See the documentary <i>Monster: A Portrait of Stalin in Blood,</i> Part 2, <i>Stalin&rsquo;s Secret Police,</i> <a href="http://youtu.be/itPPRxy_AQ4">http://youtu.be/itPPRxy_AQ4</a>; starting at 3 min. 21 sec.; <a href="/bibliography/index.html#Voslensky">Voslensky</a>, pp. 28f.)
+				(See the documentary <i>Monster: A Portrait of Stalin in Blood,</i> Part 2, <i>Stalin&rsquo;s Secret Police,</i> <a href="https://youtu.be/itPPRxy_AQ4">https://youtu.be/itPPRxy_AQ4</a>; starting at 3 min. 21 sec.; <a href="/bibliography/index.html#Voslensky">Voslensky</a>, pp. 28f.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
