add index files for sub cat folders

--- a/404.html
+++ b/404.html
@@ -467,7 +467,7 @@
 					<li><a href="/location/camps/ohrdruf/index.html">Ohrdruf</a></li>
 					<li><a href="/witness/victim/olere-david/index.html">Olère, David</a></li>
 					<li><a href="/instruments/tool/open-air-incinerations/index.html">Open-Air Incinerations</a></li>
-					<li><a href="/event/operation-harvest-festival/index.html">Operation &quot;Harvest Festival&quot;</a></li>
+					<li><a href="/event/operation-harvest-festival/index.html">Operation <q>Harvest Festival</q></a></li>
 					<li><a href="/location/camps/oranienburg/index.html">Oranienburg</a></li>
 					<li><a href="/witness/victim/ostrovsky-leonid/index.html">Ostrovsky, Leonid</a></li>
 					<li><a href="/legal/company/ostrowski-company/index.html">Ostrowski Company</a></li>
