--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -533,7 +533,7 @@
 					<li><a href="/witness/victim/razgonayev-mikhail/index.html">Razgonayev, Mikhail</a></li>
 					<li><a href="/legal/institution/red-cross/index.html">Red Cross</a></li>
 					<li><a href="/witness/victim/reder-rudolf/index.html">Reder, Rudolf</a></li>
-					<li><a href="/result/refeeding-syndrome/index.html">Refeeding Syndrome</a></li>
+					<li><a href="/results/refeeding-syndrome/index.html">Refeeding Syndrome</a></li>
 					<li><a href="/legal/institution/reichssicherheitshauptamt/index.html">Reichssicherheitshauptamt</a></li>
 					<li><a href="/concepts/religion-holocaust-as/index.html">religion, Holocaust as</a></li>
 					<li><a href="/witness/victim/renard-jean-paul/index.html">Renard, Jean-Paul</a></li>
@@ -578,7 +578,7 @@
 					<li><a href="/absurdities/shrunken-heads-myth-of/index.html">shrunken heads, myth of</a></li>
 					<li><a href="/persons/propagandist/silberschein-abraham/index.html">Silberschein, Abraham</a></li>
 					<li><a href="/persons/legal-professional/simpson-gordon/index.html">Simpson, Gordon</a></li>
-					<li><a href="/result/six-million/index.html">six million (Jewish victims)</a></li>
+					<li><a href="/results/six-million/index.html">six million (Jewish victims)</a></li>
 					<li><a href="/witness/victim/skarzynski-kazimierz/index.html">Skarżyński, Kazimierz</a></li>
 					<li><a href="/locations/country/slovakia/index.html">Slovakia</a></li>
 					<li><a href="/absurdities/soap-from-jewish-corpses/index.html">soap, from Jewish corpses</a></li>
@@ -607,7 +607,7 @@
 					<li><a href="/locations/camps/stutthof/index.html">Stutthof</a></li>
 					<li><a href="/witness/perpetrator/suchomel-franz/index.html">Suchomel, Franz</a></li>
 					<li><a href="/witness/victim/sulkowski-jan/index.html">Sułkowski, Jan</a></li>
-					<li><a href="/result/survivors/index.html">survivors</a></li>
+					<li><a href="/results/survivors/index.html">survivors</a></li>
 					<li><a href="/witness/victim/suss-franz/index.html">Süss, Franz</a></li>
 					<li><a href="/objects/swimming-pool/index.html">swimming pool</a></li>
 					<li><a href="/witness/victim/szajn-lewin-eugenia/index.html">Szajn-Lewin, Eugenia</a></li>
