--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -525,12 +525,12 @@
 					<li><a href="/witness/victim/razgonayev-mikhail/index.html">Razgonayev, Mikhail</a></li>
 					<li><a href="/legal/institution/red-cross/index.html">Red Cross</a></li>
 					<li><a href="/witness/victim/reder-rudolf/index.html">Reder, Rudolf</a></li>
-					<li><a href="/result/refeeding-syndrome/index.html">Refeeding Syndrome</a></li>
+					<li><a href="/results/refeeding-syndrome/index.html">Refeeding Syndrome</a></li>
 					<li><a href="/legal/institution/reichssicherheitshauptamt/index.html">Reichssicherheitshauptamt</a></li>
 					<li><a href="/concepts/religion-holocaust-as/index.html">Religion, Holocaust as</a></li>
 					<li><a href="/witness/victim/renard-jean-paul/index.html">Renard, Jean-Paul</a></li>
 					<li><a href="/plans-orders/resettlement/index.html">Resettlement</a></li>
-					<li><a href="/categories/result/index.html">Result</a></li>
+					<li><a href="/categories/results/index.html">Result</a></li>
 					<li><a href="/persons/propagandist/ringelblum-emanuel/index.html">Ringelblum, Emanuel</a></li>
 					<li><a href="/witness/victim/rogerie-andre/index.html">Rogerie, André</a></li>
 					<li><a href="/witness/victim/rogner-adolf/index.html">Rögner, Adolf</a></li>
@@ -570,7 +570,7 @@
 					<li><a href="/persons/propagandist/silberschein-abraham/index.html">Silberschein, Abraham</a></li>
 					<li><a href="/persons/legal-professional/simpson-gordon/index.html">Simpson, Gordon</a></li>
 					<li><a href="/sitemap/index.html">Site files</a></li>
-					<li><a href="/result/six-million/index.html">Six Million (Jewish Victims)</a></li>
+					<li><a href="/results/six-million/index.html">Six Million (Jewish Victims)</a></li>
 					<li><a href="/witness/victim/skarzynski-kazimierz/index.html">Skarżyński, Kazimierz</a></li>
 					<li><a href="/locations/country/slovakia/index.html">Slovakia</a></li>
 					<li><a href="/absurdities/soap-from-jewish-corpses/index.html">Soap, from Jewish Corpses</a></li>
@@ -599,7 +599,7 @@
 					<li><a href="/locations/camps/stutthof/index.html">Stutthof</a></li>
 					<li><a href="/witness/perpetrator/suchomel-franz/index.html">Suchomel, Franz</a></li>
 					<li><a href="/witness/victim/sulkowski-jan/index.html">Sułkowski, Jan</a></li>
-					<li><a href="/result/survivors/index.html">Survivors</a></li>
+					<li><a href="/results/survivors/index.html">Survivors</a></li>
 					<li><a href="/witness/victim/suss-franz/index.html">Süss, Franz</a></li>
 					<li><a href="/objects/swimming-pool/index.html">Swimming Pool</a></li>
 					<li><a href="/witness/victim/szajn-lewin-eugenia/index.html">Szajn-Lewin, Eugenia</a></li>
